navbar fixed alignment

--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -52,7 +52,7 @@ background-image: url("https://www.transparenttextures.com/patterns/fabric-of-sq
  width:84vw;
 }
 
-.home_button, .home_button a{
+.project_button{
     border-bottom: 2px solid #8888a2;
   }
 
